# AsiStunt

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
config/: settings.yaml
docs/: eva-novak-pitch-slides.md  eva-novak-pitch.md  eva-novak-sazetak-vlasniku.md  eva-novak-vodic-testiranja.md
soul/: default.soul.joi.yaml  default.soul.yaml  dogma.soul.yaml  schema.json
src/voice_assistant/: main.py
src/voice_assistant/adapters/: llamacpp_llm.py  omnivoice_tts.py  parakeet_asr.py
src/voice_assistant/core/: audio_input.py  audio_output.py  context_builder.py  ipc.py  (+10 more)
tests/: bench_tts_optimizations.py  conftest.py
tests/e2e/: generate_samples.py  real_e2e_test.py  stress_voice.py  test_long_speech.py
tests/integration/: test_barge_in.py  test_concurrent_ops.py  test_degraded_modes.py  test_error_resilience.py  test_full_lifecycle.py  test_language_stress.py  test_language_switching.py  test_mood_pipeline.py  test_orchestrator.py  test_playlist_timing.py  test_realistic_barge_in.py  test_voice_clone.py  test_voice_pipeline.py
tests/stress/: stress_test.py
tests/unit/: test_asr.py  test_audio_output.py  test_context_builder.py  test_ipc.py  test_language_detector.py  test_llm_adapter.py  test_mood_signal_parser.py  test_process_manager.py  test_sentence_chunker.py  test_soul_loader.py  test_state_machine.py  test_tts.py  test_vad.py  test_vram_guard.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
(+44 files in other folders)
